# pico-rnode-protocol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/monitor/: CMakeLists.txt  README.md
apps/monitor/src/: main.c
include/: pico-rnode-protocol-command-decoder-text.h  pico-rnode-protocol-command-decoder.h  pico-rnode-protocol-command-encoder.h  pico-rnode-protocol-encoder.h  pico-rnode-protocol-event-decoder-text.h  pico-rnode-protocol-event-decoder.h  pico-rnode-protocol-event-encoder.h  pico-rnode-protocol-frame.h  pico-rnode-protocol-stream.h
src/: pico-rnode-protocol-command-decoder-text.c  pico-rnode-protocol-command-decoder.c  pico-rnode-protocol-command-decoder.h  pico-rnode-protocol-command-encoder.c  pico-rnode-protocol-command-encoder.h  pico-rnode-protocol-consts.h  pico-rnode-protocol-encoder.c  pico-rnode-protocol-encoder.h  pico-rnode-protocol-event-decoder-text.c  pico-rnode-protocol-event-decoder.c  pico-rnode-protocol-event-decoder.h  pico-rnode-protocol-event-encoder.c  pico-rnode-protocol-event-encoder.h  pico-rnode-protocol-frame.c  pico-rnode-protocol-frame.h  pico-rnode-protocol-stream.c  pico-rnode-protocol-stream.h  pico-rnode-protocol.c  pico-rnode-protocol.h
tests/: CMakeLists.txt  host_tests  host_tests.c  test_command_decoder.c  test_command_decoder_text.c  test_command_encoder.c  test_command_round_trip.c  test_event_decoder.c  test_event_encoder.c  test_event_round_trip.c  test_main.c  test_utils.c  test_utils.h
